--- a/package.json
+++ b/package.json
@@ -6,22 +6,27 @@
   "type": "module",
   "scripts": {
     "test": "jest --verbose",
-    "dev": "cross-env NODE_ENV=development wrangler dev --env development --local",
-    "deploy": "wrangler deploy src/index.ts",
+    "dev": "npx wrangler dev",
+    "dev:remote": "wrangler dev --remote",
+    "deploy": "wrangler deploy src/index.ts --env production",
     "upload": "node --loader ts-node/esm src/scripts/upload",
     "connect-local": "pscale connect cloudflare-lol-db develop --port 53136",
-    "db:push": "dotenv -e .dev.env -- npx prisma db push"
+    "db:push": "dotenv -e .dev.env -- npx prisma db push",
+    "db:type:gen": "npx supabase gen types typescript --local > ./src/db/supabase.ts",
+    "db:diff": "npx supabase db diff --local --use-migra -f schema_update"
   },
   "license": "MIT",
   "dependencies": {
     "@planetscale/database": "^1.10.0",
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "^5.3.1",
     "@prisma/extension-accelerate": "^0.5.0",
+    "@supabase/supabase-js": "^2.38.0",
     "browser-env": "^3.3.0",
     "Buffer": "^0.0.0",
     "camelcasejs": "^1.0.3",
     "dotenv": "^8.1.0",
     "hono": "^2.5.7",
+    "http-status": "^1.7.0",
     "http-status-codes": "^1.3.2",
     "ky": "^1.0.1",
     "kysely": "^0.26.1",
@@ -32,7 +37,8 @@
     "querystring": "^0.2.1",
     "ts-node": "^10.9.1",
     "undici": "^5.23.0",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "zod-error": "^1.5.0"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.421.0",
@@ -40,6 +46,7 @@
     "@types/jest": "^29.2.3",
     "@types/lodash": "^4.14.199",
     "@types/node": "^20.8.0",
+    "@types/node-fetch": "^2.6.6",
     "@types/p-queue": "^3.2.1",
     "better-sqlite3": "^8.0.1",
     "cross-env": "^7.0.3",
@@ -48,8 +55,9 @@
     "esbuild-jest": "^0.5.0",
     "jest": "^29.3.1",
     "jest-environment-miniflare": "^2.11.0",
+    "miniflare": "^3.20231010.0",
     "prisma": "^5.1.1",
     "typescript": "^5.0.4",
-    "wrangler": "^3.5.1"
+    "wrangler": "^3.12.0"
   }
 }
