--- a/tsconfig.json
+++ b/tsconfig.json
@@ -105,5 +105,6 @@
 	"ts-node": {
         "esm": true,
 		"experimentalSpecifierResolution": "node",
-    }
+    },
+	"include": ["./src/**/*", "bindings.d.ts"]
 }
